refactor: незначительные исправления по коду