@@ -1,5 +1,6 @@
 package ru.yandex.practicum.filmorate.controller.validator;
 
+import org.apache.commons.lang3.StringUtils;
 import ru.yandex.practicum.filmorate.controller.dto.UserRequestDto;
 
 import javax.validation.ConstraintValidator;
@@ -14,7 +15,7 @@ public class UserValidator implements ConstraintValidator<UserValid, UserRequest
             return false;
         }
 
-        if (userRequestDto.getName() == null || userRequestDto.getName().isBlank() || userRequestDto.getName().isEmpty()) {
+        if (StringUtils.isBlank(userRequestDto.getName())) {
             userRequestDto.setName(userRequestDto.getLogin());
         }
         return true;
